fix:alignment and ui

--- a/frappe/templates/base.html
+++ b/frappe/templates/base.html
@@ -11,6 +11,7 @@
 	{% endblock %}
 
 	<title>{% block title %}{{ title | striptags }}{% endblock %}</title>
+	<!-- <title>ERPeaz</title> -->
 
 	{% block favicon %}
 	<link
